--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FerrexRace
 
+1.0.11.0 - Weapons behind tech-print research, more scenarios and player starting factions
+
+
 1.0.10.0 - Race-def now inherits BasePawn to make it more compatible
 
 
