--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FerrexRace
 
+1.0.12.0 - Mod updated for 1.3 and passed autotests
+
+
 1.0.11.0 - Weapons behind tech-print research, more scenarios and player starting factions
 
 
