Added confiurable at game-start option

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FerrexRace
 
+1.0.14.0 - Added confiurable at game-start option
+
+
 1.0.13.0 - Republish since the HAR framework changed how hair and beards are coded
 
 
