--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for FerrexRace
 
+1.4.4 - Fixed the research req for the console
+
+
 1.4.3 - Fixed gene-restrictions to not affect visuals, thanks to Razar on the HAR-discord
 
 
